added footer and scoll top button into admin index

--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -65,7 +65,7 @@
 header {
     text-align: center;
     color: #fff;
-    background: #18bc9c;
+    background: #ffcd69,;
 }
 
 header .container {
