--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -16,8 +16,9 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
             <!-- Custom CSS -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/project.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addImage.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/project.css")">
+
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
             <!-- Bootstrap Core JavaScript -->
@@ -238,15 +239,21 @@
             <br><br>
             <br><br>
 
+
+
+
+
+
             <header>
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-12"  style="text-decoration-color: slategrey">
                             <div>
                                 <h1>Upload a new image:</h1>
                                 @helper.form(action = routes.ImageController.uploadImage(project.id), 'enctype -> "multipart/form-data") {
                                     <div id = "dropzone">
-                                        <input type="file" class="" accept="image/png" name="image">
+                                        <div>drop image<br>* only .png file</div>
+                                        <input type="file" name="image" accept="image/png" >
                                     </div>
                                     <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Upload image!</button>
                                 }
@@ -261,23 +268,22 @@
                         </div>
                     </div>
                 </div>
-
+            </header>
 
             <script type="text/javascript">
+                $(document).ready(function () {
+                setCurrentScore();
+                });
 
-            $(document).ready(function () {
-            setCurrentScore();
-            });
-
-            function setCurrentScore(){
-                @defining( (Vote.findExist(session().get("id")+"", project.id+"")) ) { voterVote =>
-                    @if(voterVote != null) {
-                        document.getElementById("rating-input1-@voterVote.sel1").checked = true;
-                        document.getElementById("rating-input2-@voterVote.sel2").checked = true;
-                        document.getElementById("rating-input3-@voterVote.sel3").checked = true;
+                function setCurrentScore(){
+                    @defining( (Vote.findExist(session().get("id")+"", project.id+"")) ) { voterVote =>
+                        @if(voterVote != null) {
+                            document.getElementById("rating-input1-@voterVote.sel1").checked = true;
+                            document.getElementById("rating-input2-@voterVote.sel2").checked = true;
+                            document.getElementById("rating-input3-@voterVote.sel3").checked = true;
+                        }
                     }
-                }
-            };
+                };
             </script>
     </body>
 </html>
