--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -65,7 +65,7 @@
 header {
     text-align: center;
     color: #fff;
-    background: #ffcd69,;
+    background: #18bc9c;
 }
 
 header .container {
@@ -155,7 +155,7 @@ a#openPopUp:hover{
 .popup .popUpContainer{
     width: 100%;
     max-width: 700px;
-    position: fixed; /* To avoid scroll to target */
+    position: fixed;  To avoid scroll to target
     left: 50%;
     top: -100vh;
 
@@ -164,8 +164,8 @@ a#openPopUp:hover{
     -o-transition: top 0.35s ease;
     transition: top 0.35s ease;
 
-    /* Trick to properly center the element by using negative
-    1/2 length of element as margin left and top */
+     Trick to properly center the element by using negative
+    1/2 length of element as margin left and top
     margin-left: -250px;
     background-color: #ffffff;
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
@@ -189,7 +189,7 @@ a#openPopUp:hover{
     background-color: #a9a9a9;
     overflow: scroll;
 }
-/* The cancel button on popup dialog */
+ The cancel button on popup dialog
 .popup a.closePopUp{
     font-family: verdana;
     color: #e74c3c;
@@ -202,11 +202,11 @@ a#openPopUp:hover{
     font-size: 1.5em;
     text-decoration: none;
 }
-/* The cancel button on popup dialog */
+ The cancel button on popup dialog
 .popup a:hover{
     color: #c0392b;
 }
-/* When popup is targeted, by clicking on link with #popup in HTML */
+ When popup is targeted, by clicking on link with #popup in HTML
 .popup:target{
     opacity: 1;
     top: 0;
