--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -45,7 +45,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/index">@session.get("username")</a>
+                    <a class="navbar-brand" href="/index">@session.get("type"): @session.get("username")</a>
                 </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -253,7 +253,7 @@
                             </div>
 
                             <div>
-                                <h1>Images in Database:</h1>
+                                <h1>Image in Database:</h1>
                                 <a href="@routes.Assets.at("projectimages/" + project.id + ".png")" target="blank">
                                     <img src="@routes.Assets.at("projectimages/" + project.id + ".png")" height="100" width="100">
                                 </a>
