fixed bug in pop up vote

--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -45,7 +45,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="/index">Rating result of @session.get("username")</a>
+                        <a class="navbar-brand" href="/index">Rating result</a>
                     </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
