--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -39,7 +39,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href = "/index">@message</a>
+                        <a class="navbar-brand" href = "/index">@session.get("type"): @message</a>
                     </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
