Modified timer to use Jquery

--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -253,7 +253,7 @@
                             </div>
 
                             <div>
-                                <h1>Images in Database:</h1>
+                                <h1>Image in Database:</h1>
                                 <a href="@routes.Assets.at("projectimages/" + project.id + ".png")" target="blank">
                                     <img src="@routes.Assets.at("projectimages/" + project.id + ".png")" height="100" width="100">
                                 </a>
