--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addProj.css")">
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.countdown.js")"></script>
             <!-- Bootstrap Core JavaScript -->
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
 
@@ -81,52 +82,32 @@
             </div>
         </header>
 
-        <div class = "text-center">Registration closes in <span id="time"></span> minutes!</div>
 
 
         @if(controllers.TimerController.getTimeLeftInSec() != -1) {
+            <div class = "text-center">Registration closes in <div id = "clock" ></div>
             <form action="/stoptimer" method="get">
                 <input type="submit" value="Stop timer!!"
                 name="Submit" id="frm1_submit" />
             </form>
+            </div>
         }
-        <script>
-        function startTimer(duration, display) {
-            var start = Date.now(),
-                diff,
-                minutes,
-                seconds;
-            function timer() {
-                // get the number of seconds that have elapsed since
-                // startTimer() was called
-                diff = duration - (((Date.now() - start) / 1000) | 0);
-
-                // does the same job as parseInt truncates the float
-                minutes = (diff / 60) | 0;
-                seconds = (diff % 60) | 0;
-
-                minutes = minutes < 10 ? "0" + minutes : minutes;
-                seconds = seconds < 10 ? "0" + seconds : seconds;
-
-                display.textContent = minutes + ":" + seconds;
-
-                if (diff <= 0) {
-                    // add one second so that the count down starts at the full duration
-                    // example 05:00 not 04:59
-                    start = Date.now() + 1000;
-                }
-            };
-            // we don't want to wait a full second before the timer starts
-            timer();
-            setInterval(timer, 1000);
-        }
-
-        window.onload = function () {
-            var timerDuration = @controllers.TimerController.getTimeLeftInSec(), display = document.querySelector('#time');
-            if ( timerDuration != -1 ) {
-                startTimer ( timerDuration, display ) ;
+        <script type="text/javascript">
+        $('#clock').countdown('2015/04/18 ' + @controllers.TimerController.getTimeLeftHour + ':' + @controllers.TimerController.getTimeLeftMinute + ':0')
+        .on('update.countdown', function(event) {
+            var format = '%H:%M:%S';
+            if(event.offset.days > 0) {
+                format = '%-d day%!d ' + format;
             }
-        };
+            if(event.offset.weeks > 0) {
+                format = '%-w week%!w ' + format;
+            }
+            $(this).html(event.strftime(format));
+        })
+        .on('finish.countdown', function(event) {
+            $(this).html('Vote is closed!');
+                //.parent().addClass('disabled')
+        });
         </script>
     </body>
 </html>
