Fixed vote system bugs

--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -85,7 +85,7 @@
 
 
         @if(controllers.TimerController.getTimeLeftInSec() != -1) {
-            <div class = "text-center">Registration closes in <div id = "clock" ></div>
+            <div class = "text-center">Vote closes in <div id = "clock" ></div>
             <form action="/stoptimer" method="get">
                 <input type="submit" value="Stop timer!!"
                 name="Submit" id="frm1_submit" />
