fixed merge conflict

--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -83,7 +83,7 @@
                             @*pop up edit description*@
                             @if( session.get("username").equals(project.manager) || session.get("type").equals("Admin") ) {
                                 <div class = editPop>
-                                    <a href="#popUpEdit" id="openPopUpEdit">Edit description</a>
+                                    <a href="#popUpEdit" id="openPopUpEdit"><Edit description</a>
 
                                         <!-- POP UP -->
                                     <aside id="popUpEdit" class="popupEdit">
@@ -118,7 +118,7 @@
                 <a href="#popUp" id="openPopUp">Vote</a>
                 <!-- POP UP -->
                 <aside id="popUp" class="popup">
-                    <div class="popUpContainer">
+                        <div class="popUpContainer">
                         <header>
                             <a href="#!" class="closePopUp">X</a>
                             <h2>Vote for Team @project.name</h2>
@@ -215,6 +215,7 @@
 
                         </article>
                     </div>
+
                     <a href="#!" class="closePopUpOutSide"></a>
                 </aside>
             </div>
