--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -254,7 +254,7 @@ a#openPopUp:hover{
     width: 100%;
 }
 #submit2{
-    background-color: #a28f79;
+    /*background-color: #a28f79;*/
     width: 40%;
 }
 
