added footer to almost every page

--- a/public/stylesheets/criteria.css
+++ b/public/stylesheets/criteria.css
@@ -1,7 +1,7 @@
 body {
     font-size: 13px;
     line-height: 20px;
-    background: url('https://dl.dropbox.com/u/65958930/OLR/dust.png') center center;
+    /*background: url('https://dl.dropbox.com/u/65958930/OLR/dust.png') center center;*/
     text-align: enter;
 }
 /* -- Circular Work -- */
