--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -50,14 +50,23 @@
                         <li class="hidden active">
                             <a href = "#page-top"></a>
                         </li>
-                        <li class="page-scroll">
+                        <li class = "hidden active">
+                            <a href = "#page-top"></a>
+                        </li>
+                        <li class = "page-scroll">
                             <a href = "/index">Index</a>
                         </li>
                         <li class = "page-scroll">
                             <a href = "/result">Voting Result</a>
                         </li>
+                        <li class = "page-scoll">
+                            <a href = "/addprojectpage">Add Project</a>
+                        </li>
+                        <li class = "page-scoll">
+                            <a href = "/register">register</a>
+                        </li>
                         <li class="page-scroll">
-                            <a href = "/logout">Log Out</a>
+                            <a href= "/logout">Log Out</a>
                         </li>
                     </ul>
                 </div>
@@ -109,5 +118,32 @@
                 //.parent().addClass('disabled')
         });
         </script>
+
+            <!-- Footer -->
+        <footer class="text-center">
+            <div class="footer-above">
+                <div class="container">
+                    <div class="row">
+                        <div class="footer-col col-md-6">
+                            <h3>About Exceed Vote</h3>
+                            <p>. . .</p>
+                        </div>
+                        <div class="footer-col col-md-6">
+                            <h3>Location</h3>
+                            <p>1 Moo 6, Kamphaeng Saen,<br>Kamphaeng Saen, Nakhonpathom<br> 73140 Thailand</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-below">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            Copyright &copy; Team Malee Website 2015
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
