--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -14,7 +14,6 @@
             <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
                 <!-- Custom CSS -->
             <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
-            <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
             <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/result.css")">
                 <!-- jQuery -->
             <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
@@ -33,7 +32,6 @@
 
         </head>
         <body>
-            //header bar
             <nav class="navbar navbar-default navbar-fixed-top">
 
                 <div class="container">
@@ -54,8 +52,20 @@
                             <li class="hidden active">
                                 <a href="#page-top"></a>
                             </li>
-                            <li class="page-scroll">
-                                <a href= "/index">Index</a>
+                            <li class = "hidden active">
+                                <a href = "#page-top"></a>
+                            </li>
+                            <li class = "page-scroll">
+                                <a href = "/TimerPage">Set Timer</a>
+                            </li>
+                            <li class = "page-scroll">
+                                <a href = "/index">Index</a>
+                            </li>
+                            <li class = "page-scoll">
+                                <a href = "/addprojectpage">Add Project</a>
+                            </li>
+                            <li class = "page-scoll">
+                                <a href = "/register">register</a>
                             </li>
                             <li class="page-scroll">
                                 <a href= "/logout">Log Out</a>
@@ -66,39 +76,72 @@
                 </div>
                     <!-- /.container-fluid -->
             </nav>
-                <div class="resultTable">
+
+            <header>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12" style="text-decoration-color: slategrey">
+                            <div class="resultTable">
+                                <div class="container">
+                                    <div class="text-center">
+                                        <table class="table table-bordered">
+                                            <thead>
+                                                <tr>
+                                                    <th>Name</th>
+                                                    <th>Creativity</th>
+                                                    <th>Appearance</th>
+                                                    <th>Performance</th>
+
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                            @votes.map { acc =>
+                                                <tr>
+
+                                                    <td id="id" name="id">@acc.getname</td>
+                                                    <td>@acc.getScore</td>
+                                                    <td>@acc.getScore2</td>
+                                                    <td>@acc.getScore3</td>
+
+                                                </tr>
+                                            <tbody>
+                                            }
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+
+                <!-- Footer -->
+            <footer class="text-center">
+                <div class="footer-above">
                     <div class="container">
-                <div class="text-center">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Creativity</th>
-                                <th>Appearance</th>
-                                <th>Performance</th>
-
-                            </tr>
-                        </thead>
-                        <tbody>
-                        @votes.map { acc =>
-                            <tr>
-
-                                <td id="id" name="id">@acc.getname</td>
-                                <td>@acc.getScore</td>
-                                <td>@acc.getScore2</td>
-                                <td>@acc.getScore3</td>
-
-                            </tr>
-                        <tbody>
-                        }
-                    </table>
+                        <div class="row">
+                            <div class="footer-col col-md-6">
+                                <h3>About Exceed Vote</h3>
+                                <p>. . .</p>
+                            </div>
+                            <div class="footer-col col-md-6">
+                                <h3>Location</h3>
+                                <p>1 Moo 6, Kamphaeng Saen,<br>Kamphaeng Saen, Nakhonpathom<br> 73140 Thailand</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <div class="footer-below">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                Copyright &copy; Team Malee Website 2015
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                </div>
+            </footer>
 
-
-            <div id="browse_app" class="text-center">
-                <a class="btn btn-large btn-info" href="/index">Browse to index page (Test)</a>
-            </div>
         </body>
     </html>
