--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <!-- Custom CSS -->
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/criteria.css")">
         <!-- jQuery -->
     <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
@@ -61,42 +62,84 @@
             <!-- /.container-fluid -->
     </nav>
 
-    <div class="gridcontainer clearfix">
-        <div class="grid_3">
-            <div class="fmcircle_out">
-                <a href="#web">
-                    <div class="fmcircle_border">
-                        <div class="fmcircle_in fmcircle_blue">
-                            <span>Web-Design</span><img src="https://dl.dropbox.com/u/65958930/uploads/cssdeck/design.png" alt="" />
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3" >
+                    <div class="gridcontainer clearfix">
+                        <div class="grid_3">
+                            <div class="fmcircle_out">
+                                <a href="#web">
+                                    <div class="fmcircle_border">
+                                        <div class="fmcircle_in fmcircle_blue">
+                                            <span>Web-Design</span><img src="https://dl.dropbox.com/u/65958930/uploads/cssdeck/design.png" alt="" />
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-        </div>
 
-        <div class="grid_3">
-            <div class="fmcircle_out">
-                <a href="#branding">
-                    <div class="fmcircle_border">
-                        <div class="fmcircle_in fmcircle_green">
-                            <span>Branding</span><img src="https://dl.dropbox.com/u/65958930/uploads/cssdeck/logo.png" alt="" />
+                        <div class="grid_3">
+                            <div class="fmcircle_out">
+                                <a href="#branding">
+                                    <div class="fmcircle_border">
+                                        <div class="fmcircle_in fmcircle_green">
+                                            <span>Branding</span><img src="https://dl.dropbox.com/u/65958930/uploads/cssdeck/logo.png" alt="" />
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-        </div>
 
-        <div class="grid_3">
-            <div class="fmcircle_out">
-                <a href="#software">
-                    <div class="fmcircle_border">
-                        <div class="fmcircle_in fmcircle_red">
-                            <span>Integration</span><img src="https://dl.dropbox.com/u/65958930/uploads/cssdeck/develop.png" alt="" />
+                        <div class="grid_3">
+                            <div class="fmcircle_out">
+                                <a href="#software">
+                                    <div class="fmcircle_border">
+                                        <div class="fmcircle_in fmcircle_red">
+                                            <span>Integration</span><img src="https://dl.dropbox.com/u/65958930/uploads/cssdeck/develop.png" alt="" />
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
-    </div>
+    </header>
+
+
+            <!-- Footer -->
+        <footer class="text-center">
+            <div class="footer-above">
+                <div class="container">
+                    <div class="row">
+                        <div class="footer-col col-md-6">
+                            <h3>About Exceed Vote</h3>
+                            <p>. . .</p>
+                        </div>
+                        <div class="footer-col col-md-6">
+                            <h3>Location</h3>
+                            <p>1 Moo 6, Kamphaeng Saen,<br>Kamphaeng Saen, Nakhonpathom<br> 73140 Thailand</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-below">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                                Copyright &copy; Team Malee Website 2015
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+            <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+        <div class="scroll-top page-scroll visible-xs visble-sm">
+            <a class="btn btn-primary" href="#page-top">
+                <i class="fa fa-chevron-up"></i>
+            </a>
+        </div>
 </body>
 </html>
