--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -114,7 +114,7 @@
         </header>
             <br><br>
 
-            <div class = pop>
+            <div class = "pop">
                 <a href="#popUp" id="openPopUp">Vote</a>
                 <!-- POP UP -->
                 <aside id="popUp" class="popup">
@@ -282,5 +282,39 @@
                     }
                 };
             </script>
+
+                <!-- Footer -->
+            <footer class="text-center">
+                <div class="footer-above">
+                    <div class="container">
+                        <div class="row">
+                            <div class="footer-col col-md-6">
+                                <h3>About Exceed Vote</h3>
+                                <p>. . .</p>
+                            </div>
+                            <div class="footer-col col-md-6">
+                                <h3>Location</h3>
+                                <p>1 Moo 6, Kamphaeng Saen,<br>Kamphaeng Saen, Nakhonpathom<br> 73140 Thailand</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-below">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                Copyright &copy; Team Malee Website 2015
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+
+                <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+            <div class="scroll-top page-scroll visible-xs visble-sm">
+                <a class="btn btn-primary" href="#page-top">
+                    <i class="fa fa-chevron-up"></i>
+                </a>
+            </div>
     </body>
 </html>
