fixed bug edit description

--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -85,7 +85,7 @@
                             @*pop up edit description*@
                             @if( session.get("username").equals(project.manager) || session.get("type").equals("Admin") ) {
                                 <div class = editPop>
-                                    <a href="#popUpEdit" id="openPopUpEdit"><Edit description</a>
+                                    <a href="#popUpEdit" id="openPopUpEdit">Edit description</a>
 
                                         <!-- POP UP -->
                                     <aside id="popUpEdit" class="popupEdit">
