--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,7 @@
 @(message: String)
 
+@import play.api.Play.resource
+@import play.api.Play.current
 @import result.Project
 
 <!DOCTYPE html>
@@ -96,7 +98,11 @@
                                             <h3>Team @project.name</h3>
                                         </div>
                                     </div>
-                                    <img src="@routes.Assets.at("images/cake.png")" class="img-responsive" alt="">
+                                    @if(resource("public/projectimages/" + project.id + ".png").isDefined) {
+                                        <img src="@routes.Assets.at("projectimages/" + project.id + ".png")" class="img-responsive" alt="">
+                                    } else {
+                                        <img src="@routes.Assets.at("images/cake.png")" class="img-responsive" alt="">
+                                    }
 
                                 </a>
                             </div>
