--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -1,5 +1,7 @@
 @import result.Project
 @import result.Vote
+@import play.api.Play.resource
+@import play.api.Play.current
 @(project: Project, message: String)
 
 <!DOCTYPE html>
@@ -75,7 +77,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-center">@message</div>
-                        <img class="img-responsive" src="@routes.Assets.at("images/submarine.png")" style="width:50%;">
+                        @if(resource("public/projectimages/" + project.id + ".png").isDefined) {
+                            <img class="img-responsive" src="@routes.Assets.at("projectimages/" + project.id + ".png")" style="width:50%;">
+                        } else {
+                            <img class="img-responsive" src="@routes.Assets.at("images/submarine.png")" style="width:50%;">
+                        }
                         <div class="intro-text">
                             <span class="name">Team @project.name</span>
                             <hr class="star-light">
