--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -43,7 +43,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href = "/index">@session.get("type"): @message @if(controllers.TimerController.getTimeLeftInSec() != -1) {
-                            : Vote closes in <div id = "clock" style="display: inline"></div>}else { : Vote is close}</a>
+                            : <div id = "clock" style="display: inline"></div>}else { : Vote is closed}</a>
                     </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
