edited criteria page

--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -60,7 +60,7 @@
                             <a href = "/result">Voting Result</a>
                         </li>
                         <li class = "page-scoll">
-                            <a href = "/image">Index</a>
+                            <a href = "/index">Index</a>
                         </li>
                         <li class = "page-scoll">
                             <a href = "/register">register</a>
