--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -66,43 +66,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3" >
-                    <div class="gridcontainer clearfix">
-                        <div class="grid_3">
-                            <div class="fmcircle_out">
-                                <a href="#web">
-                                    <div class="fmcircle_border">
-                                        <div class="fmcircle_in fmcircle_blue">
-                                            <span>Web-Design</span><img src="https://dl.dropbox.com/u/65958930/uploads/cssdeck/design.png" alt="" />
-                                        </div>
-                                    </div>
-                                </a>
+                    <ul class="ch-grid">
+                        <li>
+                            <div class="ch-item ch-img-1">
+                                <div class="ch-info">
+                                    <h3>Use what you have</h3>
+                                    <p>by Angela Duncan <a href="http://drbl.in/eOPF">View on Dribbble</a></p>
+                                </div>
                             </div>
-                        </div>
-
-                        <div class="grid_3">
-                            <div class="fmcircle_out">
-                                <a href="#branding">
-                                    <div class="fmcircle_border">
-                                        <div class="fmcircle_in fmcircle_green">
-                                            <span>Branding</span><img src="https://dl.dropbox.com/u/65958930/uploads/cssdeck/logo.png" alt="" />
-                                        </div>
-                                    </div>
-                                </a>
+                        </li>
+                        <li>
+                            <div class="ch-item ch-img-2">
+                                <div class="ch-info">
+                                    <h3>Common Causes of Stains</h3>
+                                    <p>by Antonio F. Mondragon <a href="http://drbl.in/eKMi">View on Dribbble</a></p>
+                                </div>
                             </div>
-                        </div>
-
-                        <div class="grid_3">
-                            <div class="fmcircle_out">
-                                <a href="#software">
-                                    <div class="fmcircle_border">
-                                        <div class="fmcircle_in fmcircle_red">
-                                            <span>Integration</span><img src="https://dl.dropbox.com/u/65958930/uploads/cssdeck/develop.png" alt="" />
-                                        </div>
-                                    </div>
-                                </a>
+                        </li>
+                        <li>
+                            <div class="ch-item ch-img-3">
+                                <div class="ch-info">
+                                    <h3>Pink Lightning</h3>
+                                    <p>by Charlie Wagers <a href="http://drbl.in/ekhp">View on Dribbble</a></p>
+                                </div>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
