--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -105,7 +105,7 @@
                                                 <form role="form" action = "@routes.Application.editDescription(project.id)" method = post>
                                                         <!-- add text -->
                                                     <div class="wrap">
-                                                        <textarea name="inputDescription" cols="50" rows="7" style="color: red">@project.description</textarea>
+                                                        <textarea name="inputDescription" cols="40" rows="7" style="color: red">@project.description</textarea><br><br>
                                                         <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                                                     </div>
                                                 </form>
