--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -93,6 +93,10 @@
                                 <input type="form-control" class="form-control" id="GroupID" name="groupid" placeholder="Group ID">
                             </div>
                             <div class="form-group">
+                                <label for="Username">Name</label>
+                                <input type="form-control" class="form-control" id="GroupID" name="name" placeholder="Name">
+                            </div>
+                            <div class="form-group">
                                 <select class="form-control" id="type" name="type">
                                     <option  id="type" name="type">Admin</option>
                                     <option  id="type" name="type">Voter</option>
