--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -22,6 +22,7 @@
     <script src="@routes.Assets.at("javascripts/jquery.easing.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/classie.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/cbpAnimatedHeader.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/criteria.js")" type="text/javascript"></script>
 
         <!-- Custom Theme JavaScript -->
     <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
@@ -62,41 +63,35 @@
             <!-- /.container-fluid -->
     </nav>
 
-    <header>
+    <header style="text-align: left">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3" >
-                    <ul class="ch-grid">
-                        <li>
-                            <div class="ch-item ch-img-1">
-                                <div class="ch-info">
-                                    <h3>Use what you have</h3>
-                                    <p>by Angela Duncan <a href="http://drbl.in/eOPF">View on Dribbble</a></p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="ch-item ch-img-2">
-                                <div class="ch-info">
-                                    <h3>Common Causes of Stains</h3>
-                                    <p>by Antonio F. Mondragon <a href="http://drbl.in/eKMi">View on Dribbble</a></p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="ch-item ch-img-3">
-                                <div class="ch-info">
-                                    <h3>Pink Lightning</h3>
-                                    <p>by Charlie Wagers <a href="http://drbl.in/ekhp">View on Dribbble</a></p>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                <div class="col-lg-12" style="text-decoration-color: slategrey">
+                    <h1>The Best App</h1>
+
+                    <div class="mainRadio">
+
+                        <div class="radioholder">
+                            <input type="radio" name="projecttype" value="gg">
+                            <label for="teamGG">Team GG</label>
+                        </div>
+                        <div class="radioholder">
+                            <input type="radio" name="projecttype" value="theFrank" checked>
+                            <label for="teamTheFrank">Team TheFrank</label>
+                        </div>
+                        <div class="radioholder">
+                            <input type="radio" name="projecttype" value="malee">
+                            <label for="teamMalee">Team Malee</label>
+                        </div>
+                        <div class="radioholder">
+                            <input type="radio" name="projecttype" value="jded">
+                            <label for="teamJDED">Team JDED</label>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
-
 
             <!-- Footer -->
         <footer class="text-center">
