--- a/public/stylesheets/criteria.css
+++ b/public/stylesheets/criteria.css
@@ -1,116 +1,122 @@
-.ch-grid {
-    margin: 20px 0 0 0;
-    padding: 0;
-    list-style: none;
-    display: block;
+@import url(http://fonts.googleapis.com/css?family=Gudea);
+
+body {
+    font-family: 'Gudea', Helvetica, sans-serif;
+    margin: 0;
+    paddong: 0;
+    color: #333;
+}
+
+*, *:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.mainRadio {
+    padding: 2em;
+    margin: 0 auto;
+    width: 100%;
+    min-width: 460px;
+    max-width: 700px;
+}
+
+h1 {
     text-align: center;
-    width: 100%;
+    margin: 0 0 1.2em 0;
+    line-height: 150%;
 }
 
-.ch-grid:after,
-.ch-item:before {
-    content: '';
-    display: table;
+p {
+    margin-top: 2em;
+    line-height: 150%;
+    text-align: center;
 }
 
-.ch-grid:after {
-    clear: both;
+a {
+    color: #2A817C;
 }
 
-.ch-grid li {
-    width: 220px;
-    height: 220px;
+a:active,
+a:focus,
+a:hover {
+    color: #E87A31;
+}
+
+.radioholder {
+    width: 48%;
+    background: #fff;
+    margin-bottom: 1em;
+    font-size: 1.3em;
+    height: 2.4em;
+    color: #666;
+    -o-transition: .1s ease-out;
+    -ms-transition: .1s ease-out;
+    -moz-transition: .1s ease-out;
+    -webkit-transition: .1s ease-out;
+    transition: .1s ease-out;
+    cursor: pointer;
+}
+
+
+.activeradioholder {
+    background: #39A9A4;
+    color: #fff;
+}
+
+.radioholder .desc {
     display: inline-block;
-    margin: 20px;
+    vertical-align: middle;
+    padding-left: .6em;
+    line-height: 2.4em;
 }
 
-/*effect2*/
-
-.ch-item {
-    width: 100%;
+.radioholder .tick {
+    display: inline-block;
+    vertical-align: middle;
+    width: 2.4em;
     height: 100%;
-    border-radius: 50%;
-    position: relative;
-    cursor: default;
-    box-shadow:
-    inset 0 0 0 0 rgba(200,95,66, 0.4),
-    inset 0 0 0 16px rgba(255,255,255,0.6),
-    0 1px 2px rgba(0,0,0,0.1);
-    transition: all 0.4s ease-in-out;
+    background-color: #eee;
+    background-image: none;
+    -o-transition: .1s ease-out;
+    -ms-transition: .1s ease-out;
+    -moz-transition: .1s ease-out;
+    -webkit-transition: .1s ease-out;
+    transition: .1s ease-out;
 }
 
-.ch-img-1 {
-    background-image: url('../images/circus.png');
+.activeradioholder .tick {
+    background-color: #2A817C;
+    background-image: url('http://supereightstudio.com/img/radio_tick.png');
+    background-size: cover;
 }
 
-.ch-img-2 {
-    background-image: url('../images/cabin.png');
+.radioholder:nth-child(odd) {
+    float: right;
 }
 
-.ch-img-3 {
-    background-image: url('../images/game.png');
+.radioholder:nth-child(even) {
+    float: left;
 }
 
-.ch-info {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    overflow: hidden;
-    opacity: 0;
-    transition: all 0.4s ease-in-out;
-    transform: scale(0);
-    backface-visibility: hidden;
+.radioholder:hover {
+    background-color: #eee;
 }
 
-.ch-info h3 {
+.radioholder:hover .tick {
+    background-color: #ddd;
+}
+
+.activeradioholder:hover {
+    background-color: #39A9A4;
+}
+
+.activeradioholder:hover .tick {
+    background-color: #2A817C;
+}
+
+header {
+    text-align: center;
     color: #fff;
-    text-transform: uppercase;
-    position: relative;
-    letter-spacing: 2px;
-    font-size: 22px;
-    margin: 0 30px;
-    padding: 65px 0 0 0;
-    height: 110px;
-    font-family: 'Open Sans', Arial, sans-serif;
-    text-shadow:
-    0 0 1px #fff,
-    0 1px 2px rgba(0,0,0,0.3);
-}
-
-.ch-info p {
-    color: #fff;
-    padding: 10px 5px;
-    font-style: italic;
-    margin: 0 30px;
-    font-size: 12px;
-    border-top: 1px solid rgba(255,255,255,0.5);
-}
-
-.ch-info p a {
-    display: block;
-    color: rgba(255,255,255,0.7);
-    font-style: normal;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 9px;
-    letter-spacing: 1px;
-    padding-top: 4px;
-    font-family: 'Open Sans', Arial, sans-serif;
-}
-
-.ch-info p a:hover {
-    color: rgba(255,242,34, 0.8);
-}
-
-.ch-item:hover {
-    box-shadow:
-    inset 0 0 0 110px rgba(200,95,66, 0.4),
-    inset 0 0 0 16px rgba(255,255,255,0.8),
-    0 1px 2px rgba(0,0,0,0.1);
-}
-
-.ch-item:hover .ch-info {
-    opacity: 1;
-    transform: scale(1);
+    background: #fc6d58;
 }
