--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -1,3 +1,4 @@
+@(message: String)
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -41,7 +42,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/index">Criteria Vote</a>
+                <a class="navbar-brand" href = "/index">@session.get("type") : @message @if(controllers.TimerController.getTimeLeftInSec() != -1) {
+                    : <div id = "clock" style="display: inline"></div>}else { : Vote is closed}</a>
             </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
