--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -73,9 +73,10 @@
             <div class="row">
                 <div class="col-lg-12" style="text-decoration-color: slategrey">
                     <h1>Criteria Vote</h1>
-                    <br>
+                    <hr class="star-light">
+                    
                     <div class="mainRadio">
-                        <h3>> The Best App <</h3>
+                        <h3>The Best App</h3>
                         @defining(Project.find.all()) { projects =>
                             @projects.map { project =>
                                <div class="radioholder">
