--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -71,7 +71,7 @@
                     <div class="row">
                         <div class="col-lg-12" style="text-decoration-color: slategrey">
                             <h1>EXCEED VOTE</h1>
-
+                            <hr class="star-light">
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <h1>Map</h1>
-                            <hr class="star-primary">
+                            <hr class="star-light">
                             <br>
                             <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:50%;">
                         </div>
