Add Criteria to model ,show Criteria result,set position result page

--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -92,6 +92,7 @@
                                                     <th>Creativity</th>
                                                     <th>Appearance</th>
                                                     <th>Performance</th>
+                                                    <th>Criteria</th>
 
                                                 </tr>
                                             </thead>
@@ -103,7 +104,7 @@
                                                     <td>@acc.getScore</td>
                                                     <td>@acc.getScore2</td>
                                                     <td>@acc.getScore3</td>
-
+                                                    <td>@acc.getCriteria</td>
                                                 </tr>
                                             <tbody>
                                             }
