added criteria vote button to admin page

--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -54,6 +54,9 @@
                             <a href = "#page-top"></a>
                         </li>
                         <li class = "page-scroll">
+                            <a href = "/criteria">Criteria Vote</a>
+                        </li>
+                        <li class = "page-scroll">
                             <a href = "/index">Index</a>
                         </li>
                         <li class = "page-scroll">
