--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -50,8 +50,8 @@
                         <li class="hidden active">
                             <a href = "#page-top"></a>
                         </li>
-                        <li class = "hidden active">
-                            <a href = "#page-top"></a>
+                        <li class = "page-scroll">
+                            <a href = "/criteria">Criteria Vote</a>
                         </li>
                         <li class = "page-scroll">
                             <a href = "/TimerPage">Set Timer</a>
