--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -130,7 +130,7 @@
         </footer>
 
     <script type="text/javascript">
-    $('#clock').countdown('2015/04/18 ' + @controllers.TimerController.getTimeLeftHour + ':' + @controllers.TimerController.getTimeLeftMinute + ':0')
+    $('#clock').countdown('@controllers.TimerController.getDate() ' + @controllers.TimerController.getTimeLeftHour + ':' + @controllers.TimerController.getTimeLeftMinute + ':0')
     .on('update.countdown', function(event) {
     var format = '%H:%M:%S';
     if(event.offset.days > 0) {
