--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -76,8 +76,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-center">@message</div>
-                        @if(resource("public/projectimages/" + project.id + ".png").isDefined) {
-                            <img class="img-responsive" src="@routes.Assets.at("projectimages/" + project.id + ".png")" style="width:50%;">
+                        @if(controllers.ImageController.checkExist(project.id)) {
+                            <img class="img-responsive" src="@routes.ImageController.getImage(project.id)" style="width:50%;">
                         } else {
                             <img class="img-responsive" src="@routes.Assets.at("images/submarine.png")" style="width:50%;">
                         }
@@ -248,8 +248,8 @@
 
                             <div>
                                 <h1>Image in Database:</h1>
-                                <a href="@routes.Assets.at("projectimages/" + project.id + ".png")" target="blank">
-                                    <img src="@routes.Assets.at("projectimages/" + project.id + ".png")" height="100" width="100">
+                                <a href="@routes.ImageController.getImage(project.id)" target="blank">
+                                    <img src="@routes.ImageController.getImage(project.id)" height="100" width="100">
                                 </a>
 
                             </div>
