--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -154,15 +154,16 @@
                 <!-- POP UP -->
                 <aside id="popUp" class="popup">
                     <div class="popUpContainer">
-                        <header>
+                        <header id="popUpHeader">
                             <a href="#!" class="closePopUp">X</a>
                             <h2>Vote for Team @project.name</h2>
                         </header>
 
                         <article>
                             <form id="score" class="text-center" role="form" action = "/voting" method = post onsubmit="return confirm('Do you want to submit the form?');">
+                                <br>
+                                <h4 for="sel1">Creativity</h4>
                                 <div class="creativity">
-                                    <label for="sel1">Creativity</label>
                                     <span class="rating">
                                         <input type="radio" class="rating-input"
                                         id="rating-input1-5" name="sel1" value="5">
@@ -185,10 +186,8 @@
                                         <label for="rating-input1-1" class="rating-star"></label>
                                     </span>
                                 </div>
-                                <br>
-                                <br>
+                                <h4 for="sel2">Appearance</h4>
                                 <div class="appearance">
-                                    <label for="sel2">Appearance</label>
                                     <span class="rating">
                                         <input type="radio" class="rating-input"
                                         id="rating-input2-5" name="sel2" value="5">
@@ -211,10 +210,8 @@
                                         <label for="rating-input2-1" class="rating-star"></label>
                                     </span>
                                 </div>
-                                <br>
-                                <br>
+                                <h4 for="sel3">Performance</h4>
                                 <div class="performance">
-                                    <label for="sel3">Performance</label>
                                     <span class="rating">
                                         <input type="radio" class="rating-input"
                                         id="rating-input3-5" name="sel3" value="5">
@@ -237,8 +234,6 @@
                                         <label for="rating-input3-1" class="rating-star"></label>
                                     </span>
                                 </div>
-                                <br>
-                                <br>
 
                                 <input type="hidden" name="projectID" value="@project.id">
                                 <button id="submit2" type="submit" class="btn btn-primary btn-block center-block"> Submit </button>
