edited placeholder in login page

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -31,8 +31,8 @@
                     <p><br></p>
                 }
 
-                <input placeholder="Username" type="text" placeholder="Username " id="Username" name="username"/>
-                <input placeholder="Password" type="password" id="Password" name="password"/>
+                <input placeholder="Username : 561054xxxx" type="text" id="Username" name="username"/>
+                <input placeholder="Password : ...@@ku.th" type="password" id="Password" name="password"/>
                 <br>
                 <button type="submit" class="log-btn" >Log in</button>
             </form>
