Fixed criteria vote when timer doesn't start

--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -83,9 +83,9 @@
                     <div class="col-lg-12" style="text-decoration-color: slategrey">
                         <form id="timer" class="text-center" role="form" action = "/setTimer" method = post>
                             <div class="mat-div">
-                                Hour  >> <input class="mat-input" type="text" name="hour">
+                                Hour  >> <input class="mat-input" type="text" name="hour" value="0">
                             <div class="mat-div">
-                                Minute >> <input class="mat-input" type="text" name="minute">
+                                Minute >> <input class="mat-input" type="text" name="minute" value="0">
                             </div>
                             <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                         </form>
